# cellranger-qc

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: mkmolinfo.md
mkmolinfo-rs/: Cargo.toml
mkmolinfo-rs/src/: main.rs
mkmolinfo-rs/test/: README.md  compare_h5.py  dtype_check.py  gen_testdata.py  run_parity.sh  run_validation.sh
src/cellranger_qc/: __init__.py  atac_qc.py  post_align_qc.py
tests/: test_atac_qc.py  test_post_align_qc.py
