[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellranger-qc"
version = "0.1.0"
description = "Post-run QC utilities for Cell Ranger GEX, multiome, and ATAC outputs."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "beagan-svg" }
]
dependencies = [
  "anndata>=0.10,<0.12",
  "h5py>=3.10,<4",
  "matplotlib>=3.8,<4",
  "ncls>=0.0.68,<0.1",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "polars>=1.0,<2",
  "pysam>=0.22,<0.24",
  "scikit-learn>=1.3,<2",
  "scipy>=1.11,<2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]

[project.scripts]
cellranger-gex-qc = "cellranger_qc.post_align_qc:main"
cellranger-atac-qc = "cellranger_qc.atac_qc:main"

[project.urls]
Homepage = "https://github.com/beagan-svg/cellranger-qc"
Repository = "https://github.com/beagan-svg/cellranger-qc.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F"]
