[package]
name = "mkmolinfo"
version = "1.0.0"
edition = "2021"
authors = ["beagan-svg"]
description = "Takes a path to a Cell Ranger output directory and creates molecule_info_new.h5."
repository = "https://github.com/beagan-svg/cellranger-qc"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ndarray = "0.16"
hdf5 = { package = "hdf5-metno", version = "0.10" }  # maintained fork; writes/reads molecule_info.h5
rust-htslib = "0.47"    # reads possorted_genome_bam.bam

[[bin]]
name = "mkmolinfo"
path = "src/main.rs"
